# flash_promo

./: .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/flash_promo/flash_promo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/flash_promo/flash_promo/management/commands/: populate_demo_data.py  run_celery.py
backend/flash_promo/market/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/flash_promo/market/migrations/: 0001_initial.py  0002_rename_regular_prince_product_regular_price.py
backend/flash_promo/promotions/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/flash_promo/promotions/migrations/: 0001_initial.py  0002_flashpromo_promotions__start_t_affc3e_idx.py  0003_alter_flashpromo_max_distance_km.py
backend/flash_promo/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/flash_promo/users/migrations/: 0001_initial.py
backend/flash_promo/utils/: models.py  tests.py  utils.py
deployment/images/: backend.Dockerfile
flash_promo/: docker-compose.yaml  manage.py  requirements.txt
flash_promo/flash_promo/: asgi.py  settings.py  urls.py  wsgi.py
flash_promo/promotions/: views.py
